# arc_lib

./: .gitignore
arc_lib/: Cargo.toml  block0.cir  block1.cir  block2.cir  block3.cir  block4.cir  block5.cir  glassbench_v1.db  heaptrack.benchmark-9f6e66b966466ed1.15776.zst  heaptrack.cargo.272569.zst  heaptrack.cargo.272695.zst  heaptrack.cargo.322447.zst  output.cir  output.txt  resultados_versões  resultados_versões2  simulation_path.cir
arc_lib/benches/: criterion_bench.rs  find_path_bench.rs  glass_bench.rs  heaptrack_v1.rs  iai_bench.rs  iai_bench_2.rs  instructions.txt  valgrind_v2.rs
arc_lib/benchmarks_menores/Z5xp1/: Z5xp1_out_0.pla  Z5xp1_out_1.pla  Z5xp1_out_2.pla  Z5xp1_out_3.pla  Z5xp1_out_4.pla  Z5xp1_out_6.pla  Z5xp1_out_8.pla  Z5xp1_out_9.pla
arc_lib/benchmarks_menores/Z9sym/: Z9sym_out_0.pla
arc_lib/benchmarks_menores/bw/: bw_out_1.pla  bw_out_11.pla  bw_out_12.pla  bw_out_14.pla  bw_out_18.pla  bw_out_19.pla  bw_out_2.pla  bw_out_22.pla  bw_out_23.pla  bw_out_24.pla  bw_out_26.pla  bw_out_27.pla  bw_out_3.pla  bw_out_5.pla  bw_out_6.pla  bw_out_7.pla  bw_out_8.pla
arc_lib/benchmarks_menores/c02/: c02_adder_col_out_0.pla  c02_adder_col_out_1.pla  c02_adder_col_out_2.pla
arc_lib/benchmarks_menores/c03/: c03_adder_col_out_0.pla  c03_adder_col_out_1.pla  c03_adder_col_out_2.pla  c03_adder_col_out_3.pla
arc_lib/benchmarks_menores/c04/: c04_adder_col_out_0.pla  c04_adder_col_out_1.pla  c04_adder_col_out_2.pla  c04_adder_col_out_3.pla  c04_adder_col_out_4.pla
arc_lib/benchmarks_menores/c5xp1/: c5xp1_out_0.pla  c5xp1_out_1.pla  c5xp1_out_4.pla  c5xp1_out_6.pla  c5xp1_out_7.pla  c5xp1_out_9.pla
arc_lib/benchmarks_menores/clip/: clip_out_0.pla  clip_out_1.pla  clip_out_2.pla  clip_out_4.pla
arc_lib/benchmarks_menores/con1/: con1_out_0.pla  con1_out_1.pla
arc_lib/benchmarks_menores/ex1010/: ex1010_out_1.pla  ex1010_out_2.pla  ex1010_out_3.pla  ex1010_out_4.pla  ex1010_out_5.pla  ex1010_out_6.pla  ex1010_out_7.pla  ex1010_out_8.pla  ex1010_out_9.pla
arc_lib/benchmarks_menores/ex5/: ex5_out_1.pla  ex5_out_10.pla  ex5_out_11.pla  ex5_out_13.pla  ex5_out_14.pla  ex5_out_15.pla  ex5_out_16.pla  ex5_out_17.pla  ex5_out_18.pla  ex5_out_19.pla  ex5_out_2.pla  ex5_out_20.pla  ex5_out_21.pla  ex5_out_22.pla  ex5_out_23.pla  ex5_out_26.pla  ex5_out_27.pla  ex5_out_28.pla  ex5_out_3.pla  ex5_out_30.pla  ex5_out_31.pla  ex5_out_32.pla  ex5_out_33.pla  ex5_out_34.pla  ex5_out_36.pla  ex5_out_37.pla  ex5_out_39.pla  ex5_out_40.pla  ex5_out_41.pla  ex5_out_44.pla  ex5_out_45.pla  ex5_out_46.pla  ex5_out_48.pla  ex5_out_49.pla  ex5_out_5.pla  ex5_out_51.pla  ex5_out_52.pla  ex5_out_53.pla  ex5_out_55.pla  ex5_out_56.pla  (+7 more)
arc_lib/benchmarks_menores/inc/: inc_out_1.pla  inc_out_2.pla  inc_out_5.pla  inc_out_6.pla  inc_out_7.pla  inc_out_8.pla
arc_lib/benchmarks_menores/misex1/: misex1_out_0.pla  misex1_out_1.pla  misex1_out_2.pla  misex1_out_6.pla
arc_lib/benchmarks_menores/rd53/: rd53_out_0.pla  rd53_out_1.pla  rd53_out_2.pla
arc_lib/benchmarks_menores/rd73/: rd73_out_0.pla
arc_lib/benchmarks_menores/rd84/: rd84_out_0.pla  rd84_out_1.pla  (+1 more)
arc_lib/src/: bin.rs  find_arcos_v1.rs  find_arcos_v2.rs  find_path.rs  ler_pla.rs  libtestes.rlib  main.rs  pla4.txt  pla5.txt  pla6.txt  pla8.txt  testes.rs
arc_lib/tests/: testes.rs
(+176 files in other folders)
