[package]
name = "arc_lib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arc_lib_test"
path = "src/bin.rs"

[lib]
name = "arc_lib"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.maturin]
name = "arc_lib_py"  # Nome da biblioteca Python que será gerada

[build-dependencies]
pyo3-build-config = "0.21"

[dependencies]
criterion = "0.3"
#pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }

[dev-dependencies]
glassbench = "0.3"
iai = "0.1"

# Desativando otimizações dos benches
#[profile.bench]
#opt-level = 0
#debug = true

[[bench]]
name = "iai_bench"
harness = false
path = "benches/iai_bench.rs"

[[bench]]
name = "iai_bench_2"
harness = false
path = "benches/iai_bench_2.rs"

[[bench]]
name = "criterion_bench"
harness = false 
path = "benches/criterion_bench.rs"

[[bench]]
name = "glass_bench"
harness = false 
path = "benches/glass_bench.rs"

[[bench]]
name = "valgrind_v1"
harness = false 
path = "benches/valgrind_v1.rs"

[[bench]]
name = "valgrind_v2"
harness = false 
path = "benches/valgrind_v2.rs"

[[bench]]
name = "heaptrack_v1"
harness = false 
path = "benches/heaptrack_v1.rs"

[[bench]]
name = "heaptrack_v2"
harness = false 
path = "benches/heaptrack_v2.rs"

[[bench]]
name = "find_path"
harness = false 
path = "benches/find_path_bench.rs"